Allow some SQL debug

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,6 +37,7 @@ db.default.driver=org.postgresql.Driver
 db.default.url="postgres://root:root@127.0.0.1/ftm"
 # db.default.user=sa
 # db.default.password=""
+# db.default.logStatements=true
 
 # Evolutions
 # ~~~~~
@@ -57,3 +58,4 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+logger.com.jolbox=DEBUG // for EBean
