Update to Play 2.4.0

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,18 +4,15 @@
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
-# If you deploy your application to several instances be sure to use the same key!
+#
+# This must be changed for production, but we recommend not changing it in this file.
+#
+# See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
 application.secret="7rrd_8tmLC?nPL9wh[4t[nD7lTxWl_N]0R7DgxcP20r0fq_cEMQ8ZB8yE:qXDIKR"
 
 # The application languages
 # ~~~~~
-application.langs="en"
-
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-# application.global=Global
+play.i18n.langs = [ "en" ]
 
 # Router
 # ~~~~~
@@ -26,7 +23,7 @@ application.langs="en"
 # So for an application router like `my.application.Router`,
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
-# application.router=my.application.Routes
+# play.http.router = my.application.Routes
 
 # Database configuration
 # ~~~~~
@@ -37,25 +34,11 @@ db.default.driver=org.postgresql.Driver
 db.default.url="postgres://root:root@127.0.0.1/ftm"
 # db.default.user=sa
 # db.default.password=""
-# db.default.logStatements=true
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+# play.evolutions.enabled=false
 
-# Logger
-# ~~~~~
-# You can also configure logback (http://logback.qos.ch/),
-# by providing an application-logger.xml file in the conf directory.
-
-# Root logger:
-logger.root=ERROR
-
-# Logger used by the framework:
-logger.play=INFO
-
-# Logger provided to your application:
-logger.application=DEBUG
-
-logger.com.jolbox=DEBUG // for EBean
+# You can disable evolutions for a specific datasource if necessary
+# play.evolutions.db.default.enabled=false
